admin dashboard updated - adib

--- a/admin_dashboard.html
+++ b/admin_dashboard.html
@@ -71,11 +71,11 @@
           </li>
 
           <li>
-            <a style="text-decoration: none;" class="collapsed question" href="#">Pending Funds</a>
+            <a style="text-decoration: none;" class="collapsed question" href="pending_funds.html">Pending Funds</a>
           </li>
 
           <li>
-            <a style="text-decoration: none;" class="collapsed question" href="#">Pending Questions</a>
+            <a style="text-decoration: none;" class="collapsed question" href="pending_questions.html">Pending Questions</a>
           </li>
 
           <li>
