--- a/pending_questions.html
+++ b/pending_questions.html
@@ -44,7 +44,7 @@
 
   <script src="https://code.jquery.com/jquery-1.10.2.js"></script>
 
-    <title>Pending Funds</title>
+    <title>Pending Questions</title>
   </head>
   <body>
     <!-- navbar starts -->
@@ -59,26 +59,19 @@
           
           <div class="col-xxl-12 col-12">
             <div class="card mb-2 border border-3  border-success">
-              <h5 class="card-header text-white bg-success">Pending Requested Funds</h5>
+              <h5 class="card-header text-white bg-success">Pending Questions</h5>
 
               <div class="card-body bg-white">
                   <div class="p-3 mt-2 mb-2 border border border-2  border-success">
                     <a
-                    href="paper_details.html"
+                    href="#"
                     class="text-decoration-none text-black"
                     >
-                        <h4 class="mb-3">Paper Title</h4>
                         <p class="m-0 p-2">
-                            <h6 class="d-inline-block">Domain: Artificial Intelligence, Machine Learning, Augmented Reality</h6>
-                            <h6 class="inline-block">
-                            Authors: Lorem,ipsum,dolor,sit,amet
-                            </h6>
-                            <h6 class="inline-block">
-                            Amount Requested: 50,000 Tk
-                            </h6>
+                            <h6 class="d-inline-block">Q: Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam culpa tempora eaque natus iure? Accusantium ratione distinctio facilis culpa, quos repellat? Cumque suscipit nesciunt expedita animi facere totam quia iste?</h6>
                         </p>
                     </a>
-                    <div class="btn-group" role="group" aria-label="Basic example">
+                    <div class="btn-group-sm" role="group" aria-label="Basic example">
                         <button type="button" class="btn btn-outline-success">Accept</button>
                         <button type="button" class="btn btn-outline-danger">Reject</button>
                     </div>
@@ -88,21 +81,14 @@
               <div class="card-body bg-white">
                 <div class="p-3 mt-2 mb-2 border border border-2  border-success">
                   <a
-                  href="paper_details.html"
+                  href="#"
                   class="text-decoration-none text-black"
                   >
-                      <h4 class="mb-3">Paper Title</h4>
                       <p class="m-0 p-2">
-                          <h6 class="d-inline-block">Domain: Artificial Intelligence, Machine Learning, Augmented Reality</h6>
-                          <h6 class="inline-block">
-                          Authors: Lorem,ipsum,dolor,sit,amet
-                          </h6>
-                          <h6 class="inline-block">
-                          Amount Requested: 50,000 Tk
-                          </h6>
+                          <h6 class="d-inline-block">Q: Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam culpa tempora eaque natus iure? Accusantium ratione distinctio facilis culpa, quos repellat? Cumque suscipit nesciunt expedita animi facere totam quia iste?</h6>
                       </p>
                   </a>
-                  <div class="btn-group" role="group" aria-label="Basic example">
+                  <div class="btn-group-sm" role="group" aria-label="Basic example">
                       <button type="button" class="btn btn-outline-success">Accept</button>
                       <button type="button" class="btn btn-outline-danger">Reject</button>
                   </div>
@@ -112,21 +98,14 @@
             <div class="card-body bg-white">
                 <div class="p-3 mt-2 mb-2 border border border-2  border-success">
                   <a
-                  href="paper_details.html"
+                  href="#"
                   class="text-decoration-none text-black"
                   >
-                      <h4 class="mb-3">Paper Title</h4>
                       <p class="m-0 p-2">
-                          <h6 class="d-inline-block">Domain: Artificial Intelligence, Machine Learning, Augmented Reality</h6>
-                          <h6 class="inline-block">
-                          Authors: Lorem,ipsum,dolor,sit,amet
-                          </h6>
-                          <h6 class="inline-block">
-                          Amount Requested: 50,000 Tk
-                          </h6>
+                          <h6 class="d-inline-block">Q: Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam culpa tempora eaque natus iure? Accusantium ratione distinctio facilis culpa, quos repellat? Cumque suscipit nesciunt expedita animi facere totam quia iste?</h6>
                       </p>
                   </a>
-                  <div class="btn-group" role="group" aria-label="Basic example">
+                  <div class="btn-group-sm" role="group" aria-label="Basic example">
                       <button type="button" class="btn btn-outline-success">Accept</button>
                       <button type="button" class="btn btn-outline-danger">Reject</button>
                   </div>
@@ -136,21 +115,14 @@
             <div class="card-body bg-white">
                 <div class="p-3 mt-2 mb-2 border border border-2  border-success">
                   <a
-                  href="paper_details.html"
+                  href="#"
                   class="text-decoration-none text-black"
                   >
-                      <h4 class="mb-3">Paper Title</h4>
                       <p class="m-0 p-2">
-                          <h6 class="d-inline-block">Domain: Artificial Intelligence, Machine Learning, Augmented Reality</h6>
-                          <h6 class="inline-block">
-                          Authors: Lorem,ipsum,dolor,sit,amet
-                          </h6>
-                          <h6 class="inline-block">
-                          Amount Requested: 50,000 Tk
-                          </h6>
+                          <h6 class="d-inline-block">Q: Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam culpa tempora eaque natus iure? Accusantium ratione distinctio facilis culpa, quos repellat? Cumque suscipit nesciunt expedita animi facere totam quia iste?</h6>
                       </p>
                   </a>
-                  <div class="btn-group" role="group" aria-label="Basic example">
+                  <div class="btn-group-sm" role="group" aria-label="Basic example">
                       <button type="button" class="btn btn-outline-success">Accept</button>
                       <button type="button" class="btn btn-outline-danger">Reject</button>
                   </div>
@@ -160,21 +132,14 @@
             <div class="card-body bg-white">
                 <div class="p-3 mt-2 mb-2 border border border-2  border-success">
                   <a
-                  href="paper_details.html"
+                  href="#"
                   class="text-decoration-none text-black"
                   >
-                      <h4 class="mb-3">Paper Title</h4>
                       <p class="m-0 p-2">
-                          <h6 class="d-inline-block">Domain: Artificial Intelligence, Machine Learning, Augmented Reality</h6>
-                          <h6 class="inline-block">
-                          Authors: Lorem,ipsum,dolor,sit,amet
-                          </h6>
-                          <h6 class="inline-block">
-                          Amount Requested: 50,000 Tk
-                          </h6>
+                          <h6 class="d-inline-block">Q: Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam culpa tempora eaque natus iure? Accusantium ratione distinctio facilis culpa, quos repellat? Cumque suscipit nesciunt expedita animi facere totam quia iste?</h6>
                       </p>
                   </a>
-                  <div class="btn-group" role="group" aria-label="Basic example">
+                  <div class="btn-group-sm" role="group" aria-label="Basic example">
                       <button type="button" class="btn btn-outline-success">Accept</button>
                       <button type="button" class="btn btn-outline-danger">Reject</button>
                   </div>
@@ -184,21 +149,14 @@
             <div class="card-body bg-white">
                 <div class="p-3 mt-2 mb-2 border border border-2  border-success">
                   <a
-                  href="paper_details.html"
+                  href="#"
                   class="text-decoration-none text-black"
                   >
-                      <h4 class="mb-3">Paper Title</h4>
                       <p class="m-0 p-2">
-                          <h6 class="d-inline-block">Domain: Artificial Intelligence, Machine Learning, Augmented Reality</h6>
-                          <h6 class="inline-block">
-                          Authors: Lorem,ipsum,dolor,sit,amet
-                          </h6>
-                          <h6 class="inline-block">
-                          Amount Requested: 50,000 Tk
-                          </h6>
+                          <h6 class="d-inline-block">Q: Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam culpa tempora eaque natus iure? Accusantium ratione distinctio facilis culpa, quos repellat? Cumque suscipit nesciunt expedita animi facere totam quia iste?</h6>
                       </p>
                   </a>
-                  <div class="btn-group" role="group" aria-label="Basic example">
+                  <div class="btn-group-sm" role="group" aria-label="Basic example">
                       <button type="button" class="btn btn-outline-success">Accept</button>
                       <button type="button" class="btn btn-outline-danger">Reject</button>
                   </div>
@@ -208,21 +166,14 @@
             <div class="card-body bg-white">
                 <div class="p-3 mt-2 mb-2 border border border-2  border-success">
                   <a
-                  href="paper_details.html"
+                  href="#"
                   class="text-decoration-none text-black"
                   >
-                      <h4 class="mb-3">Paper Title</h4>
                       <p class="m-0 p-2">
-                          <h6 class="d-inline-block">Domain: Artificial Intelligence, Machine Learning, Augmented Reality</h6>
-                          <h6 class="inline-block">
-                          Authors: Lorem,ipsum,dolor,sit,amet
-                          </h6>
-                          <h6 class="inline-block">
-                          Amount Requested: 50,000 Tk
-                          </h6>
+                          <h6 class="d-inline-block">Q: Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam culpa tempora eaque natus iure? Accusantium ratione distinctio facilis culpa, quos repellat? Cumque suscipit nesciunt expedita animi facere totam quia iste?</h6>
                       </p>
                   </a>
-                  <div class="btn-group" role="group" aria-label="Basic example">
+                  <div class="btn-group-sm" role="group" aria-label="Basic example">
                       <button type="button" class="btn btn-outline-success">Accept</button>
                       <button type="button" class="btn btn-outline-danger">Reject</button>
                   </div>
@@ -232,21 +183,14 @@
             <div class="card-body bg-white">
                 <div class="p-3 mt-2 mb-2 border border border-2  border-success">
                   <a
-                  href="paper_details.html"
+                  href="#"
                   class="text-decoration-none text-black"
                   >
-                      <h4 class="mb-3">Paper Title</h4>
                       <p class="m-0 p-2">
-                          <h6 class="d-inline-block">Domain: Artificial Intelligence, Machine Learning, Augmented Reality</h6>
-                          <h6 class="inline-block">
-                          Authors: Lorem,ipsum,dolor,sit,amet
-                          </h6>
-                          <h6 class="inline-block">
-                          Amount Requested: 50,000 Tk
-                          </h6>
+                          <h6 class="d-inline-block">Q: Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam culpa tempora eaque natus iure? Accusantium ratione distinctio facilis culpa, quos repellat? Cumque suscipit nesciunt expedita animi facere totam quia iste?</h6>
                       </p>
                   </a>
-                  <div class="btn-group" role="group" aria-label="Basic example">
+                  <div class="btn-group-sm" role="group" aria-label="Basic example">
                       <button type="button" class="btn btn-outline-success">Accept</button>
                       <button type="button" class="btn btn-outline-danger">Reject</button>
                   </div>
