--- a/pending_papers.html
+++ b/pending_papers.html
@@ -143,7 +143,7 @@
                          <p class="m-0 p-2">
                            <h6 class="d-inline-block">Artificial Intelligence</h6>
                            | 2019-2020
-                           <a href="thesis_list.html" class="text-decoration-none float-end">
+                           <a href="#" class="text-decoration-none float-end">
                              <div class="btn-group float-end" role="group" aria-label="Basic example">
                                <button type="button" class="btn btn-outline-success">Accept</button>
                                <button type="button" class="btn btn-outline-danger">Reject</button>
@@ -165,7 +165,7 @@
                         <p class="m-0 p-2">
                           <h6 class="d-inline-block">Networking</h6>
                           | 2019-2020
-                          <a href="thesis_list.html" class="text-decoration-none float-end">
+                          <a href="#" class="text-decoration-none float-end">
                             <div class="btn-group float-end" role="group" aria-label="Basic example">
                               <button type="button" class="btn btn-outline-success">Accept</button>
                               <button type="button" class="btn btn-outline-danger">Reject</button>
@@ -188,7 +188,7 @@
                          <p class="m-0 p-2">
                            <h6 class="d-inline-block">Networking</h6>
                            | 2019-2020
-                           <a href="thesis_list.html" class="text-decoration-none float-end">
+                           <a href="#" class="text-decoration-none float-end">
                              <div class="btn-group float-end" role="group" aria-label="Basic example">
                                <button type="button" class="btn btn-outline-success">Accept</button>
                                <button type="button" class="btn btn-outline-danger">Reject</button>
@@ -213,7 +213,7 @@
                          <p class="m-0 p-2">
                            <h6 class="d-inline-block">Environmental Science</h6>
                            | 2019-2020
-                           <a href="thesis_list.html" class="text-decoration-none float-end">
+                           <a href="#" class="text-decoration-none float-end">
                              <div class="btn-group float-end" role="group" aria-label="Basic example">
                                <button type="button" class="btn btn-outline-success">Accept</button>
                                <button type="button" class="btn btn-outline-danger">Reject</button>
