--- a/home.html
+++ b/home.html
@@ -76,7 +76,7 @@
         <div class="testimonials-slider swiper" data-aos="fade-up" data-aos-delay="100">
           <div class="swiper-wrapper">
 
-            <div class="swiper-slide">
+            <div class="swiper-slide" onclick="document.location.href='facultyprofile.html'">
               <div class="testimonial-item">
                 <p>
                   <i class="bx bxs-quote-alt-left quote-icon-left"></i>
@@ -89,7 +89,7 @@
               </div>
             </div><!-- End testimonial item -->
   
-            <div class="swiper-slide">
+            <div class="swiper-slide" onclick="document.location.href='facultyprofile.html'">
               <div class="testimonial-item">
                 <p>
                   <i class="bx bxs-quote-alt-left quote-icon-left"></i>
@@ -101,7 +101,7 @@
                 <h4>Asst. Professor,Department of Computer Science & Engineering (CSE)</h4>
               </div>
             </div><!-- End testimonial item -->
-            <div class="swiper-slide">
+            <div class="swiper-slide" onclick="document.location.href='facultyprofile.html'">
               <div class="testimonial-item">
                 <p>
                   <i class="bx bxs-quote-alt-left quote-icon-left"></i>
@@ -114,7 +114,7 @@
                 <h4>Lecturer,Department of Computer Science & Engineering (CSE)</h4>
               </div>
             </div>
-            <div class="swiper-slide">
+            <div class="swiper-slide" onclick="document.location.href='facultyprofile.html'">
               <div class="testimonial-item">
                 <p>
                   <i class="bx bxs-quote-alt-left quote-icon-left"></i>
@@ -149,7 +149,7 @@
         <div class="testimonials-slider swiper" data-aos="fade-up" data-aos-delay="100">
           <div class="swiper-wrapper">
 
-            <div class="swiper-slide">
+            <div class="swiper-slide" onclick="document.location.href='paper_details.html'">
               <div class="testimonial-item">
                 <p>
                   <i class="bx bxs-quote-alt-left quote-icon-left"></i>
@@ -162,7 +162,7 @@
               </div>
             </div><!-- End testimonial item -->
   
-            <div class="swiper-slide">
+            <div class="swiper-slide" onclick="document.location.href='paper_details.html'">
               <div class="testimonial-item">
                 <p>
                   <i class="bx bxs-quote-alt-left quote-icon-left"></i>
@@ -174,7 +174,7 @@
                 <h4>Sharifa Rania Mahmud</h4>
               </div>
             </div><!-- End testimonial item -->
-            <div class="swiper-slide">
+            <div class="swiper-slide" onclick="document.location.href='paper_details.html'">
               <div class="testimonial-item">
                 <p>
                   <i class="bx bxs-quote-alt-left quote-icon-left"></i>
@@ -187,7 +187,7 @@
                 <h4>Muhaimin Bin Munir</h4>
               </div>
             </div>
-            <div class="swiper-slide">
+            <div class="swiper-slide" onclick="document.location.href='paper_details.html'">
               <div class="testimonial-item">
                 <p>
                   <i class="bx bxs-quote-alt-left quote-icon-left"></i>
