--- a/navbar.html
+++ b/navbar.html
@@ -14,7 +14,7 @@
         >
           <span class="navbar-toggler-icon"></span>
         </button>
-        <a href="home.html" class="navbar-brand">
+        <a href="index.html" class="navbar-brand">
           <img class="ms-md-5 ms-1" src="img/navlogo.png" alt="logo"
         /></a>
 
@@ -27,7 +27,7 @@
               <a
                 class="nav-link active text-success fw-bolder"
                 aria-current="page"
-                href="home.html"
+                href="index.html"
                 >Home</a
               >
             </li>
