alisha back after eid

--- a/faq.html
+++ b/faq.html
@@ -56,8 +56,11 @@
       <div class="container" data-aos="fade-up">
 
         <div class="section-title">
-          <h2>Frequently Asked Questions</h2>
-          <p> ..</p>
+          <h2>Our Forum: Frequently Asked Questions and more</h2>
+          <p> </p>
+          <form action="" method="post">
+            <input type="name" name="text"><a href="faq.html"><input type="submit" value="Ask away"></a>
+          </form>
         </div>
 
         <ul class="faq-list">
@@ -67,15 +70,24 @@
             <div id="faq1" class="collapse" data-bs-parent=".faq-list">
               <p>
                 Please check out Home->Upcoming Conferenced->Check Deadlines
-              </p>
+              <br><br>
+              <form action="" method="post">
+                <input type="name" name="text"><a href="faq.html"><input type="submit" value="Post Answer"></a>
+              </form>
+            </p>
             </div>
           </li>
 
           <li>
+           
             <div data-bs-toggle="collapse" href="#faq2" class="collapsed question">Can I upload my unpublished paper? <i class="bi bi-chevron-down icon-show"></i><i class="bi bi-chevron-up icon-close"></i></div>
             <div id="faq2" class="collapse" data-bs-parent=".faq-list">
               <p>
                 Of Course you can upload your unpublished papers provided the documents are authentic.
+                <br><br>
+                <form action="" method="post">
+                  <input type="name" name="text"><a href="faq.html"><input type="submit" value="Post Answer"></a>
+                </form>
               </p>
             </div>
           </li>
@@ -85,6 +97,10 @@
             <div id="faq3" class="collapse" data-bs-parent=".faq-list">
               <p>
                 Checkout Contact Us->Admin
+                <br><br>
+                <form action="" method="post">
+                  <input type="name" name="text"><a href="faq.html"><input type="submit" value="Post Answer"></a>
+                </form>
               </p>
             </div>
           </li>
@@ -94,6 +110,10 @@
             <div id="faq4" class="collapse" data-bs-parent=".faq-list">
               <p>
                 Of Course you can upload your unpublished papers provided the documents are authentic.
+                <br><br>
+                <form action="" method="post">
+                  <input type="name" name="text"><a href="faq.html"><input type="submit" value="Post Answer"></a>
+                </form>
               </p>
             </div>
           </li>
@@ -103,6 +123,10 @@
             <div id="faq5" class="collapse" data-bs-parent=".faq-list">
               <p>
                 Check out the conference calendar in the upcoming conferences section
+                <br><br>
+                <form action="" method="post">
+                  <input type="name" name="text"><a href="faq.html"><input type="submit" value="Post Answer"></a>
+                </form>
               </p>
             </div>
           </li>
