--- a/faq.html
+++ b/faq.html
@@ -56,7 +56,7 @@
       <div class="container" data-aos="fade-up">
 
         <div class="section-title">
-          <h2>Our Forum: Frequently Asked Questions and more</h2>
+          <h2>Frequently Asked Questions</h2>
           <p> </p>
           <form action="" method="post">
             <input type="name" name="text"><a href="faq.html"><input type="submit" value="Ask away"></a>
