Loginbuttons,html,php-Alisha

--- a/signup.html
+++ b/signup.html
@@ -170,7 +170,7 @@
                 <p class="hint-text">Sign up with your social media account or email address</p>
                 <div class="social-btn text-center">
 
-                    <a href="AlumniReg.html" class="btn btn-primary btn-lg">
+                    <a href="AlumniReg.html" class="btn btn-warning btn-lg">
                         <!-- <i class="fa fa-facebook"></i> -->
                          Alumni</a>
                     <a href="StudentReg.html" class="btn btn-success btn-lg">
@@ -179,7 +179,13 @@
                     <a href="FacultyReg.html" class="btn btn-danger btn-lg">
                         <!-- <i class="fa fa-google"></i>  -->
                         Faculty</a>
+                        <br>
+                        <br>
+                        <button type="button" class="btn btn-info">Have an Account? Click here to Login</button>
                 </div>
+                <br> 
+                
+
                 <br>
               
         </div>
