--- a/signup.html
+++ b/signup.html
@@ -167,7 +167,7 @@
         <div class="signup-form">
             <form action="/examples/actions/confirmation.php" method="post">
                 <h2>Create an Account</h2>
-                <p class="hint-text">Sign up with your social media account or email address</p>
+                <p class="hint-text">Sign up as one of the following</p>
                 <div class="social-btn text-center">
 
                     <a href="AlumniReg.html" class="btn btn-warning btn-lg">
