connected admin dashboard, replaced more .html links with .php

--- a/admin_dashboard.html
+++ b/admin_dashboard.html
@@ -49,7 +49,7 @@
   <body>
     <!-- navbar starts -->
     <div id="nav-placeholder"></div>
-    <script> $(function(){ $("#nav-placeholder").load("navbar.html"); }); </script>
+    <script> $(function(){ $("#nav-placeholder").load("navbar.php"); }); </script>
     <!-- navbar ends -->
 
     <section id="faq" class="faq section-bg" style="margin-top: -2rem;">
@@ -67,15 +67,15 @@
           </li>
 
           <li>
-            <a style="text-decoration: none;" class="collapsed question" href="pending_papers.html">Pending Papers</a>
+            <a style="text-decoration: none;" class="collapsed question" href="pending_papers.php">Pending Papers</a>
           </li>
 
           <li>
-            <a style="text-decoration: none;" class="collapsed question" href="pending_funds.html">Pending Funds</a>
+            <a style="text-decoration: none;" class="collapsed question" href="pending_funds.php">Pending Funds</a>
           </li>
 
           <li>
-            <a style="text-decoration: none;" class="collapsed question" href="pending_questions.html">Pending Questions</a>
+            <a style="text-decoration: none;" class="collapsed question" href="pendingquestions.php">Pending Questions</a>
           </li>
 
           <li>
