--- a/facultyprofile.html
+++ b/facultyprofile.html
@@ -50,7 +50,7 @@
   <body>
     <!-- navbar starts -->
     <div id="nav-placeholder"></div>
-    <script> $(function(){ $("#nav-placeholder").load("navbar.html"); }); </script>
+    <script> $(function(){ $("#nav-placeholder").load("navbar.php"); }); </script>
     <!-- navbar ends -->
 
       
@@ -260,14 +260,14 @@
                   </div>
                   <div class="col-md-2"></div>
                   <div class="col-md-4" style="text-align: right;">
-                      <a href="researchPaperform.html" button type="button" class="btn btn-warning">Add New Research Paper</a>
+                      <a href="researchPaperform.php" button type="button" class="btn btn-warning">Add New Research Paper</a>
                   </div>
                 </div>
               </div>
 
               <div class="card-body bg-white">
                 <a
-                  href="paper_details.html"
+                  href="paper_details.php"
                   class="text-decoration-none text-black"
                   ><div class="p-3 mt-2 mb-2 border border border-2  border-success">
                     <h4 class="mb-3">An Automated Cloud-Based Digitized Management System for Rohingya Refugee Camp in Bangladesh</h4>
@@ -283,7 +283,7 @@
 
               <div class="card-body bg-white">
                 <a
-                  href="paper_details.html"
+                  href="paper_details.php"
                   class="text-decoration-none text-black"
                   ><div class="p-3 mt-2 mb-2 border border border-2  border-success">
                     <h4 class="mb-3">Paper Title</h4>
@@ -299,7 +299,7 @@
 
               <div class="card-body bg-white">
                 <a
-                  href="paper_details.html"
+                  href="paper_details.php"
                   class="text-decoration-none text-black"
                   ><div class="p-3 mt-2 mb-2 border border border-2  border-success">
                     <h4 class="mb-3">Paper Title</h4>
@@ -315,7 +315,7 @@
 
               <div class="card-body bg-white">
                 <a
-                  href="paper_details.html"
+                  href="paper_details.php"
                   class="text-decoration-none text-black"
                   ><div class="p-3 mt-2 mb-2 border border border-2  border-success">
                     <h4 class="mb-3">Paper Title</h4>
