--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
   <body>
     <!-- navbar starts -->
     <div id="nav-placeholder"></div>
-    <script> $(function(){ $("#nav-placeholder").load("navbar.html"); }); </script>
+    <script> $(function(){ $("#nav-placeholder").load("navbar.php"); }); </script>
     <!-- navbar ends -->
 
     <div class="container px-4 pt-5">
@@ -149,7 +149,7 @@
         <div class="testimonials-slider swiper" data-aos="fade-up" data-aos-delay="100">
           <div class="swiper-wrapper">
 
-            <div class="swiper-slide" onclick="document.location.href='paper_details.html'">
+            <div class="swiper-slide" onclick="document.location.href='paper_details.php'">
               <div class="testimonial-item">
                 <p>
                   <i class="bx bxs-quote-alt-left quote-icon-left"></i>
@@ -162,7 +162,7 @@
               </div>
             </div><!-- End testimonial item -->
   
-            <div class="swiper-slide" onclick="document.location.href='paper_details.html'">
+            <div class="swiper-slide" onclick="document.location.href='paper_details.php'">
               <div class="testimonial-item">
                 <p>
                   <i class="bx bxs-quote-alt-left quote-icon-left"></i>
@@ -174,7 +174,7 @@
                 <h4>Sharifa Rania Mahmud</h4>
               </div>
             </div><!-- End testimonial item -->
-            <div class="swiper-slide" onclick="document.location.href='paper_details.html'">
+            <div class="swiper-slide" onclick="document.location.href='paper_details.php'">
               <div class="testimonial-item">
                 <p>
                   <i class="bx bxs-quote-alt-left quote-icon-left"></i>
@@ -187,7 +187,7 @@
                 <h4>Muhaimin Bin Munir</h4>
               </div>
             </div>
-            <div class="swiper-slide" onclick="document.location.href='paper_details.html'">
+            <div class="swiper-slide" onclick="document.location.href='paper_details.php'">
               <div class="testimonial-item">
                 <p>
                   <i class="bx bxs-quote-alt-left quote-icon-left"></i>
