--- a/login.html
+++ b/login.html
@@ -81,7 +81,7 @@ p.error {
   <body>
     <!-- navbar starts -->
     <div id="nav-placeholder"></div>
-    <script> $(function(){ $("#nav-placeholder").load("navbar.html"); }); </script>
+    <script> $(function(){ $("#nav-placeholder").load("navbar.php"); }); </script>
     <!-- navbar ends -->
 
 
