--- a/navbar.html
+++ b/navbar.html
@@ -14,7 +14,7 @@
         >
           <span class="navbar-toggler-icon"></span>
         </button>
-        <a href="index.html" class="navbar-brand">
+        <a href="index.php" class="navbar-brand">
           <img class="ms-md-5 ms-1" src="img/navlogo.png" alt="logo"
         /></a>
 
@@ -27,12 +27,12 @@
               <a
                 class="nav-link active text-success fw-bolder"
                 aria-current="page"
-                href="index.html"
+                href="index.php"
                 >Home</a
               >
             </li>
             <li class="nav-item mx-3">
-              <a class="nav-link" href="paper.html">Papers</a>
+              <a class="nav-link" href="paper.php">Papers</a>
             </li>
             <li class="nav-item mx-3">
               <a class="nav-link" href="funds.html"
@@ -40,7 +40,7 @@
               >
             </li>
             <li class="nav-item mx-3">
-              <a class="nav-link" href="conferences.html">Conferences</a>
+              <a class="nav-link" href="conferences.php">Conferences</a>
             </li>
             <li class="nav-item mx-3">
               <a class="nav-link" href="faq.html">FAQs</a>
