--- a/paper.html
+++ b/paper.html
@@ -49,7 +49,7 @@
   <body>
     <!-- navbar starts -->
     <div id="nav-placeholder"></div>
-    <script> $(function(){ $("#nav-placeholder").load("navbar.html"); }); </script>
+    <script> $(function(){ $("#nav-placeholder").load("navbar.php"); }); </script>
     <!-- navbar ends -->
 
     <!-- papers -->
@@ -398,7 +398,7 @@
 
               <div class="card-body bg-white">
                 <a
-                  href="paper_details.html"
+                  href="paper_details.php"
                   class="text-decoration-none text-black"
                   ><div class="p-3 mt-2 mb-2 border border border-2  border-success">
                     <h4 class="mb-3">Paper Title</h4>
@@ -414,7 +414,7 @@
 
               <div class="card-body bg-white">
                 <a
-                  href="paper_details.html"
+                  href="paper_details.php"
                   class="text-decoration-none text-black"
                   ><div class="p-3 mt-2 mb-2 border border border-2  border-success">
                     <h4 class="mb-3">Paper Title</h4>
@@ -430,7 +430,7 @@
 
               <div class="card-body bg-white">
                 <a
-                  href="paper_details.html"
+                  href="paper_details.php"
                   class="text-decoration-none text-black"
                   ><div class="p-3 mt-2 mb-2 border border border-2  border-success">
                     <h4 class="mb-3">Paper Title</h4>
@@ -446,7 +446,7 @@
 
               <div class="card-body bg-white">
                 <a
-                  href="paper_details.html"
+                  href="paper_details.php"
                   class="text-decoration-none text-black"
                   ><div class="p-3 mt-2 mb-2 border border border-2  border-success">
                     <h4 class="mb-3">Paper Title</h4>
@@ -462,7 +462,7 @@
 
               <div class="card-body bg-white">
                 <a
-                  href="paper_details.html"
+                  href="paper_details.php"
                   class="text-decoration-none text-black"
                   ><div class="p-3 mt-2 mb-2 border border border-2  border-success">
                     <h4 class="mb-3">Paper Title</h4>
@@ -478,7 +478,7 @@
 
               <div class="card-body bg-white">
                 <a
-                  href="paper_details.html"
+                  href="paper_details.php"
                   class="text-decoration-none text-black"
                   ><div class="p-3 mt-2 mb-2 border border border-2  border-success">
                     <h4 class="mb-3">Paper Title</h4>
@@ -494,7 +494,7 @@
 
               <div class="card-body bg-white">
                 <a
-                  href="paper_details.html"
+                  href="paper_details.php"
                   class="text-decoration-none text-black"
                   ><div class="p-3 mt-2 mb-2 border border border-2  border-success">
                     <h4 class="mb-3">Paper Title</h4>
@@ -510,7 +510,7 @@
 
               <div class="card-body bg-white">
                 <a
-                  href="paper_details.html"
+                  href="paper_details.php"
                   class="text-decoration-none text-black"
                   ><div class="p-3 mt-2 mb-2 border border border-2  border-success">
                     <h4 class="mb-3">Paper Title</h4>
