--- a/paper_details.html
+++ b/paper_details.html
@@ -58,7 +58,7 @@
   <body>
     <!-- navbar starts -->
     <div id="nav-placeholder"></div>
-    <script> $(function(){ $("#nav-placeholder").load("navbar.html"); }); </script>
+    <script> $(function(){ $("#nav-placeholder").load("navbar.php"); }); </script>
     <!-- navbar ends -->
 
     <!-- middle part starts -->
@@ -103,7 +103,7 @@
             </div>
 
             <div class="info-card p-2 m-3">
-                <a class="btn btn-success" id="reqfund" type="button" href="request_fund.html">Request Fund</a>
+                <a class="btn btn-success" id="reqfund" type="button" href="request_fund.php">Request Fund</a>
               </div>
 
           </div>
