--- a/funds.html
+++ b/funds.html
@@ -49,7 +49,7 @@
   <body>
     <!-- navbar starts -->
     <div id="nav-placeholder"></div>
-    <script> $(function(){ $("#nav-placeholder").load("navbar.html"); }); </script>
+    <script> $(function(){ $("#nav-placeholder").load("navbar.php"); }); </script>
     <!-- navbar ends -->
 
     <!-- papers -->
@@ -64,7 +64,7 @@
               <div class="card-body bg-white">
                   <div class="p-3 mt-2 mb-2 border border border-2  border-success">
                     <a
-                    href="paper_details.html"
+                    href="paper_details.php"
                     class="text-decoration-none text-black"
                     >
                         <h4 class="mb-3">Paper Title</h4>
@@ -79,14 +79,14 @@
                         <div class="progress-bar bg-success" role="progressbar" style="width: 25%;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="500">2500/50,000 Tk raised</div>
                     </div>
                     <br>
-                    <a class="btn-sm btn-success" id="donatefund" type="button" href="donate_fund.html" style="text-decoration: none;">Donate Fund</a>
+                    <a class="btn-sm btn-success" id="donatefund" type="button" href="grantproviderform.php" style="text-decoration: none;">Donate Fund</a>
                   </div>
               </div>
 
               <div class="card-body bg-white">
                 <div class="p-3 mt-2 mb-2 border border border-2  border-success">
                   <a
-                  href="paper_details.html"
+                  href="paper_details.php"
                   class="text-decoration-none text-black"
                   >
                       <h4 class="mb-3">Paper Title</h4>
@@ -101,14 +101,14 @@
                       <div class="progress-bar bg-success" role="progressbar" style="width: 28.57%;" aria-valuenow="10" aria-valuemin="0" aria-valuemax="35">10,000/35,000 Tk raised</div>
                   </div>
                   <br>
-                  <a class="btn-sm btn-success" id="donatefund" type="button" href="donate_fund.html" style="text-decoration: none;">Donate Fund</a>
+                  <a class="btn-sm btn-success" id="donatefund" type="button" href="grantproviderform.php" style="text-decoration: none;">Donate Fund</a>
                 </div>
             </div>
 
             <div class="card-body bg-white">
                 <div class="p-3 mt-2 mb-2 border border border-2  border-success">
                   <a
-                  href="paper_details.html"
+                  href="paper_details.php"
                   class="text-decoration-none text-black"
                   >
                       <h4 class="mb-3">Paper Title</h4>
@@ -123,14 +123,14 @@
                       <div class="progress-bar bg-success" role="progressbar" style="width: 50%;" aria-valuenow="3" aria-valuemin="0" aria-valuemax="6">30,000/60,000 Tk raised</div>
                   </div>
                   <br>
-                  <a class="btn-sm btn-success" id="donatefund" type="button" href="donate_fund.html" style="text-decoration: none;">Donate Fund</a>
+                  <a class="btn-sm btn-success" id="donatefund" type="button" href="grantproviderform.php" style="text-decoration: none;">Donate Fund</a>
                 </div>
             </div>
 
             <div class="card-body bg-white">
                 <div class="p-3 mt-2 mb-2 border border border-2  border-success">
                   <a
-                  href="paper_details.html"
+                  href="paper_details.php"
                   class="text-decoration-none text-black"
                   >
                       <h4 class="mb-3">Paper Title</h4>
@@ -145,14 +145,14 @@
                       <div class="progress-bar bg-success" role="progressbar" style="width: 25%;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="500">2500/50,000 Tk raised</div>
                   </div>
                   <br>
-                  <a class="btn-sm btn-success" id="donatefund" type="button" href="donate_fund.html" style="text-decoration: none;">Donate Fund</a>
+                  <a class="btn-sm btn-success" id="donatefund" type="button" href="grantproviderform.php" style="text-decoration: none;">Donate Fund</a>
                 </div>
             </div>
 
             <div class="card-body bg-white">
                 <div class="p-3 mt-2 mb-2 border border border-2  border-success">
                   <a
-                  href="paper_details.html"
+                  href="paper_details.php"
                   class="text-decoration-none text-black"
                   >
                       <h4 class="mb-3">Paper Title</h4>
@@ -167,14 +167,14 @@
                       <div class="progress-bar bg-success" role="progressbar" style="width: 25%;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="500">2500/50,000 Tk raised</div>
                   </div>
                   <br>
-                  <a class="btn-sm btn-success" id="donatefund" type="button" href="donate_fund.html" style="text-decoration: none;">Donate Fund</a>
+                  <a class="btn-sm btn-success" id="donatefund" type="button" href="grantproviderform.php" style="text-decoration: none;">Donate Fund</a>
                 </div>
             </div>
 
             <div class="card-body bg-white">
                 <div class="p-3 mt-2 mb-2 border border border-2  border-success">
                   <a
-                  href="paper_details.html"
+                  href="paper_details.php"
                   class="text-decoration-none text-black"
                   >
                       <h4 class="mb-3">Paper Title</h4>
@@ -189,14 +189,14 @@
                       <div class="progress-bar bg-success" role="progressbar" style="width: 25%;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="500">2500/50,000 Tk raised</div>
                   </div>
                   <br>
-                  <a class="btn-sm btn-success" id="donatefund" type="button" href="donate_fund.html" style="text-decoration: none;">Donate Fund</a>
+                  <a class="btn-sm btn-success" id="donatefund" type="button" href="grantproviderform.php" style="text-decoration: none;">Donate Fund</a>
                 </div>
             </div>
 
             <div class="card-body bg-white">
                 <div class="p-3 mt-2 mb-2 border border border-2  border-success">
                   <a
-                  href="paper_details.html"
+                  href="paper_details.php"
                   class="text-decoration-none text-black"
                   >
                       <h4 class="mb-3">Paper Title</h4>
@@ -211,14 +211,14 @@
                       <div class="progress-bar bg-success" role="progressbar" style="width: 25%;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="500">2500/50,000 Tk raised</div>
                   </div>
                   <br>
-                  <a class="btn-sm btn-success" id="donatefund" type="button" href="donate_fund.html" style="text-decoration: none;">Donate Fund</a>
+                  <a class="btn-sm btn-success" id="donatefund" type="button" href="grantproviderform.php" style="text-decoration: none;">Donate Fund</a>
                 </div>
             </div>
 
             <div class="card-body bg-white">
                 <div class="p-3 mt-2 mb-2 border border border-2  border-success">
                   <a
-                  href="paper_details.html"
+                  href="paper_details.php"
                   class="text-decoration-none text-black"
                   >
                       <h4 class="mb-3">Paper Title</h4>
@@ -233,7 +233,7 @@
                       <div class="progress-bar bg-success" role="progressbar" style="width: 25%;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="500">2500/50,000 Tk raised</div>
                   </div>
                   <br>
-                  <a class="btn-sm btn-success" id="donatefund" type="button" href="donate_fund.html" style="text-decoration: none;">Donate Fund</a>
+                  <a class="btn-sm btn-success" id="donatefund" type="button" href="grantproviderform.php" style="text-decoration: none;">Donate Fund</a>
                 </div>
             </div>
               
