--- a/pending_funds.html
+++ b/pending_funds.html
@@ -49,7 +49,7 @@
   <body>
     <!-- navbar starts -->
     <div id="nav-placeholder"></div>
-    <script> $(function(){ $("#nav-placeholder").load("navbar.html"); }); </script>
+    <script> $(function(){ $("#nav-placeholder").load("navbar.php"); }); </script>
     <!-- navbar ends -->
 
     <!-- papers -->
@@ -64,7 +64,7 @@
               <div class="card-body bg-white">
                   <div class="p-3 mt-2 mb-2 border border border-2  border-success">
                     <a
-                    href="paper_details.html"
+                    href="paper_details.php"
                     class="text-decoration-none text-black"
                     >
                         <h4 class="mb-3">Paper Title</h4>
@@ -88,7 +88,7 @@
               <div class="card-body bg-white">
                 <div class="p-3 mt-2 mb-2 border border border-2  border-success">
                   <a
-                  href="paper_details.html"
+                  href="paper_details.php"
                   class="text-decoration-none text-black"
                   >
                       <h4 class="mb-3">Paper Title</h4>
@@ -112,7 +112,7 @@
             <div class="card-body bg-white">
                 <div class="p-3 mt-2 mb-2 border border border-2  border-success">
                   <a
-                  href="paper_details.html"
+                  href="paper_details.php"
                   class="text-decoration-none text-black"
                   >
                       <h4 class="mb-3">Paper Title</h4>
@@ -136,7 +136,7 @@
             <div class="card-body bg-white">
                 <div class="p-3 mt-2 mb-2 border border border-2  border-success">
                   <a
-                  href="paper_details.html"
+                  href="paper_details.php"
                   class="text-decoration-none text-black"
                   >
                       <h4 class="mb-3">Paper Title</h4>
@@ -160,7 +160,7 @@
             <div class="card-body bg-white">
                 <div class="p-3 mt-2 mb-2 border border border-2  border-success">
                   <a
-                  href="paper_details.html"
+                  href="paper_details.php"
                   class="text-decoration-none text-black"
                   >
                       <h4 class="mb-3">Paper Title</h4>
@@ -184,7 +184,7 @@
             <div class="card-body bg-white">
                 <div class="p-3 mt-2 mb-2 border border border-2  border-success">
                   <a
-                  href="paper_details.html"
+                  href="paper_details.php"
                   class="text-decoration-none text-black"
                   >
                       <h4 class="mb-3">Paper Title</h4>
@@ -208,7 +208,7 @@
             <div class="card-body bg-white">
                 <div class="p-3 mt-2 mb-2 border border border-2  border-success">
                   <a
-                  href="paper_details.html"
+                  href="paper_details.php"
                   class="text-decoration-none text-black"
                   >
                       <h4 class="mb-3">Paper Title</h4>
@@ -232,7 +232,7 @@
             <div class="card-body bg-white">
                 <div class="p-3 mt-2 mb-2 border border border-2  border-success">
                   <a
-                  href="paper_details.html"
+                  href="paper_details.php"
                   class="text-decoration-none text-black"
                   >
                       <h4 class="mb-3">Paper Title</h4>
