--- a/studentprofile.html
+++ b/studentprofile.html
@@ -224,14 +224,14 @@
                     </div>
                     <div class="col-md-2"></div>
                     <div class="col-md-4" style="text-align: right;">
-                        <a href="researchPaperform.html" button type="button" class="btn btn-warning">Add New Research Paper</a>
+                        <a href="researchPaperform.php" button type="button" class="btn btn-warning">Add New Research Paper</a>
                     </div>
                   </div>
                 </div>
 
                 <div class="card-body bg-white">
                   <a
-                    href="paper_details.html"
+                    href="paper_details.php"
                     class="text-decoration-none text-black"
                     ><div class="p-3 mt-2 mb-2 border border border-2  border-success">
                       <h4 class="mb-3">Paper Title</h4>
@@ -247,7 +247,7 @@
 
                 <div class="card-body bg-white">
                   <a
-                    href="paper_details.html"
+                    href="paper_details.php"
                     class="text-decoration-none text-black"
                     ><div class="p-3 mt-2 mb-2 border border border-2  border-success">
                       <h4 class="mb-3">Paper Title</h4>
@@ -263,7 +263,7 @@
 
                 <div class="card-body bg-white">
                   <a
-                    href="paper_details.html"
+                    href="paper_details.php"
                     class="text-decoration-none text-black"
                     ><div class="p-3 mt-2 mb-2 border border border-2  border-success">
                       <h4 class="mb-3">Paper Title</h4>
@@ -279,7 +279,7 @@
 
                 <div class="card-body bg-white">
                   <a
-                    href="paper_details.html"
+                    href="paper_details.php"
                     class="text-decoration-none text-black"
                     ><div class="p-3 mt-2 mb-2 border border border-2  border-success">
                       <h4 class="mb-3">Paper Title</h4>
@@ -308,7 +308,7 @@
                           <h6 class="d-inline-block">Paper Domain</h6>
                           | 2019-2020
                         </p>
-                        <a href="form.html" class="ms-auto inline-block btn btn-dark"
+                        <a href="form.php" class="ms-auto inline-block btn btn-dark"
                           >Edit <i class="fa fa-edit"></i
                         ></a>
                       </div> -->
@@ -326,7 +326,7 @@
                           <h6 class="d-inline-block">Paper Domain</h6>
                           | 2019-2020
                         </p>
-                        <a href="form.html" class="ms-auto inline-block btn btn-dark"
+                        <a href="form.php" class="ms-auto inline-block btn btn-dark"
                           >Edit <i class="fa fa-edit"></i
                         ></a>
                       </div> -->
