--- a/signup.html
+++ b/signup.html
@@ -170,18 +170,18 @@
                 <p class="hint-text">Sign up as one of the following</p>
                 <div class="social-btn text-center">
 
-                    <a href="AlumniReg.html" class="btn btn-warning btn-lg">
+                    <a href="AlumniReg.php" class="btn btn-warning btn-lg">
                         <!-- <i class="fa fa-facebook"></i> -->
                          Alumni</a>
-                    <a href="StudentReg.html" class="btn btn-success btn-lg">
+                    <a href="StudentReg.php" class="btn btn-success btn-lg">
                         <!-- <i class="fa fa-twitter"></i>  -->
                         Student</a>
-                    <a href="FacultyReg.html" class="btn btn-danger btn-lg">
+                    <a href="FacultyReg.php" class="btn btn-danger btn-lg">
                         <!-- <i class="fa fa-google"></i>  -->
                         Faculty</a>
                         <br>
                         <br>
-                        <button type="button" class="btn btn-info">Have an Account? Click here to Login</button>
+                        <a href="login.php" type="button" class="btn btn-info">Have an Account? Click here to Login</a>
                 </div>
                 <br> 
                 
