--- a/admin_dashboard.html
+++ b/admin_dashboard.html
@@ -75,7 +75,7 @@
           </li>
 
           <li>
-            <a style="text-decoration: none;" class="collapsed question" href="pendingquestions.php">Pending Questions</a>
+            <a style="text-decoration: none;" class="collapsed question" href="pending_questions.php">Pending Questions</a>
           </li>
 
           <li>
